--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
           <meta charset="UTF-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          
           <title>Document</title>
      </head>
      <body>
           <h1>Home Page</h1>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="/html/about.html">About</a>
+          <a href="/html/contact.html">Contact</a>
      </body>
 </html>
