--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
      <head>
           <meta charset="UTF-8">
-          <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Document</title>
+          <style href="/layout/index.css"></style>
+          <title>HPINGC</title>
+
      </head>
      <body>
           <h1>Home Page</h1>
