new file:   assets/css/about.css 	new file:   assets/css/overide.css 	new file:   assets/images/bg.jpg 	deleted:    html/about.html 	modified:   index.html 	new file:   layout/about.html 	renamed:    html/contact.html -> layout/contact.html 	deleted:    layout/index.css

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
      <head>
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <style href="/layout/index.css"></style>
+          <link rel="stylesheet" href="/assets/css/overide.css">
           <title>HPINGC</title>
 
      </head>
      <body>
           <h1>Home Page</h1>
-          <a href="/html/about.html">About</a>
-          <a href="/html/contact.html">Contact</a>
+          <a href="/layout/about.html">About</a>
+          <a href="/layout/contact.html">Contact</a>
      </body>
 </html>
