--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="/assets/css/overide.css">
      <link rel="stylesheet" href="/assets/css/header.css">
+     <script src="/assets/js/theme-toggle.js"></script>
      <title>Index</title>
 </head>
 
 <body>
      <nav class="header">
-          <div class="logo">LOGO</div>
+          <div class="logo">HPINGC</div>
           <ul class="menu">
                <li><button class="toggle-theme-btn">🌙</button></li>
                <li><a href="/index.html" title="Home"><span>Home</span></a></li>
@@ -19,6 +20,7 @@
                <li><a href="/layout/projects.html" title="Projects"><span>Projects</span></a></li>
           </ul>
      </nav>
+          
      <!-- <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo"> -->
      <!-- <h1 class ="title">INDEX</h1> -->
 </body>
