new file:   assets/css/body.css 	new file:   assets/css/footer.css 	modified:   assets/css/header.css 	modified:   assets/css/overide.css 	modified:   assets/js/theme-toggle.js 	modified:   index.html 	deleted:    layout/contact.html

--- a/index.html
+++ b/index.html
@@ -1,26 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head class="head">
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="/assets/css/overide.css">
-     <link rel="stylesheet" href="/assets/css/header.css">
-     <script src="/assets/js/theme-toggle.js"></script>
-     <title>Index</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/css/overide.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/body.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
+    <script src="/assets/js/theme-toggle.js"></script>
+    <title>Index</title>
 </head>
 
 <body>
-     <nav class="header">
-          <div class="logo">HPINGC</div>
-          <ul class="menu">
-               <li><button class="toggle-theme-btn">🌙</button></li>
-               <li><a href="/index.html" title="Home"><span>Home</span></a></li>
-               <li><a href="/layout/about.html" title="About"><span>About</span></a></li>
-               <li><a href="/layout/projects.html" title="Projects"><span>Projects</span></a></li>
-          </ul>
-     </nav>
-     
-</body>
+    <nav class="header">
+        <div class="logo">HPINGC</div>
+        <ul class="menu">
+            <li><button class="toggle-theme-btn">🌙</button></li>
+            <li><a href="/index.html" title="Home"><span>Home</span></a></li>
+            <li><a href="/layout/about.html" title="About"><span>About</span></a></li>
+            <li><a href="https://github.com/HaiPingCao" title="Projects"><span>Github</span></a></li>
+        </ul>
+    </nav>
 
+    <!-- <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Welcome to HPINGC</h1>
+                <p>Your destination for innovative solutions and creative projects</p>
+                <button class="cta-button">Explore Projects</button>
+            </div>
+        </section>
+
+        <section class="featured">
+            <h2>Featured Projects</h2>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-image"></div>
+                    <h3>Project Title 1</h3>
+                    <p>A brief description of the project and its key features.</p>
+                    <a href="/layout/projects.html" class="card-link">Learn More</a>
+                </div>
+                <div class="card">
+                    <div class="card-image"></div>
+                    <h3>Project Title 2</h3>
+                    <p>A brief description of the project and its key features.</p>
+                    <a href="/layout/projects.html" class="card-link">Learn More</a>
+                </div>
+                <div class="card">
+                    <div class="card-image"></div>
+                    <h3>Project Title 3</h3>
+                    <p>A brief description of the project and its key features.</p>
+                    <a href="/layout/projects.html" class="card-link">Learn More</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-preview">
+            <div class="about-content">
+                <h2>About Us</h2>
+                <p>HPINGC is dedicated to creating innovative solutions that make a difference. Our team of experts combines creativity with technical expertise to deliver outstanding projects.</p>
+                <a href="/layout/about.html" class="about-link">Read More</a>
+            </div>
+        </section>
+    </main> -->
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>HPINGC</h3>
+                <!-- <p>Innovative solutions for modern challenges</p> -->
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/layout/about.html">About</a></li>
+                    <li><a href="/layout/projects.html">Projects</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Contact</h3>
+                <p>Email: dev@hpingc.io.vn</p>
+                <!-- <p>Phone: (555) 123-4567</p> -->
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 HPINGC. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
 </html>
