--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h1>Welcome to HPINGC</h1>
-                <p>This is my silly website</p>
+                <p>This is my silly website -__-</p>
             
             </div>
         </section>
