modified:   index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3>HPINGC</h3>
-          <!-- <p>Innovative solutions for modern challenges</p> -->
+          <p>I am interested in coding, graphic design, and electrical engineering</p>
         </div>
         <div class="footer-section">
           <h3>Quick Links</h3>
