modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <main>
       <section class="hero">
         <div class="hero-content">
-          <h1>Welcome to HPINGC</h1>
-          <p>This is my silly website -__-</p>
+          <h1>Welcome to HPINGC silly website</h1>
+          <p>-__-</p>
         </div>
       </section>
     </main>
