modified:   assets/css/body.css 	modified:   assets/css/overide.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     </nav>
     <main>
       <section class="hero">
+        <div class="hero-title"><h1>Title</h1></div>
+        <div class="hero-title-time-separator"></div>
+        <div class="hero-upload-time">datetime</div>
+        <div class="hero-separator"></div>
         <div class="hero-content">
           <p>
             The wave crashed and hit the sandcastle head-on. The sandcastle
