modified:   index.html

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <div class="logo">HPINGC</div>
       <ul class="menu">
         <li><button class="toggle-theme-btn">🌙</button></li>
-        <li>
+        <!-- <li>
           <a href="/index.html" title="Home"><span>Home</span></a>
         </li>
         <li>
           <a href="/layout/about.html" title="About"><span>About</span></a>
-        </li>
+        </li> -->
         <li>
           <a href="https://github.com/HaiPingCao" title="Projects"
             ><span>Github</span></a
@@ -51,9 +51,10 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="https://github.com/HaiPingCao">Github</a></li>
+            <!-- <li><a href="/index.html">Home</a></li>
             <li><a href="/layout/about.html">About</a></li>
-            <li><a href="/layout/projects.html">Projects</a></li>
+            <li><a href="/layout/projects.html">Projects</a></li> -->
           </ul>
         </div>
         <div class="footer-section">
