--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--HEADER-->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +13,7 @@
   </head>
 
   <body>
+    <!--BODY-->
     <nav class="header">
       <div class="logo">LOGO Here</div>
       <ul class="menu">
@@ -33,36 +35,24 @@
     </nav>
     <main>
       <section class="hero">
+        <!-- HERO TITLE -->
         <div class="hero-title"><h1>Title</h1></div>
+        <!-- HERO SEPARATOR -->
         <div class="hero-title-time-separator"></div>
+        <!-- HERO UPLOAD TIME -->
         <div class="hero-upload-time">datetime</div>
+        <!-- HERO SEPARATOR -->
         <div class="hero-separator"></div>
+        <!-- HERO CONTENT START -->
         <div class="hero-content">
           <p></p>
-          <!-- <p>-__-</p> -->
         </div>
+        <!-- HERO CONTENT END -->
       </section>
     </main>
-
+    <!--FOOTER-->
     <footer class="footer">
-      <p class="copyright">&copy; 2025</p>
-      <!-- <div class="footer-content">
-        <div class="footer-section">
-          <h3>About Me</h3>
-          <p>Context here</p>
-        </div>
-        <div class="footer-section">
-          <h3>Quick Links</h3>
-          <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/layout/about.html">About</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h3>Contact</h3>
-          <p>Email: user@domain</p>
-        </div>
-      </div> -->
+      <p class="copyright">&copy;HaiPingCao 2025</p>
     </footer>
   </body>
 </html>
