renamed:    assets/css/body.css -> assets/css/old/body.css 	renamed:    assets/css/footer.css -> assets/css/old/footer.css 	renamed:    assets/css/header.css -> assets/css/old/header.css 	renamed:    assets/css/overide.css -> assets/css/old/overide.css 	new file:   assets/css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <!--HEADER-->
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/overide.css" />
-    <link rel="stylesheet" href="/assets/css/header.css" />
-    <link rel="stylesheet" href="/assets/css/body.css" />
-    <link rel="stylesheet" href="/assets/css/footer.css" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <script src="/assets/js/theme-toggle.js"></script>
     <title>Index</title>
   </head>
@@ -17,42 +14,12 @@
     <nav class="header">
       <div class="logo">LOGO Here</div>
       <ul class="menu">
-        <li>
-          <button class="toggle-theme-btn">🌙</button>
-        </li>
-        <li>
-          <a href="/index.html" title="Home"> <span>Home</span></a>
-        </li>
-        <li>
-          <a href="/layout/about.html" title="About"> <span>About</span></a>
-        </li>
-        <li>
-          <a href="https://github.com/HaiPingCao" title="Projects">
-            <span>Github</span>
-          </a>
-        </li>
+        <li><button class="toggle-theme-btn">🌙</button></li>
+        <li><a href="/index.html" title="Home"> <span>Home</span></a></li>
+        <!-- <li><a href="/layout/about.html" title="About"> <span>About</span></a></li> -->
+        <li><a href="https://github.com/HaiPingCao" title="Projects"><span>Github</span></a></li>
       </ul>
     </nav>
-    <main>
-      <section class="hero">
-        <!-- HERO TITLE -->
-        <div class="hero-title"><h1>Title</h1></div>
-        <!-- HERO SEPARATOR -->
-        <div class="hero-title-time-separator"></div>
-        <!-- HERO UPLOAD TIME -->
-        <div class="hero-upload-time">datetime</div>
-        <!-- HERO SEPARATOR -->
-        <div class="hero-separator"></div>
-        <!-- HERO CONTENT START -->
-        <div class="hero-content">
-          <p></p>
-        </div>
-        <!-- HERO CONTENT END -->
-      </section>
-    </main>
-    <!--FOOTER-->
-    <footer class="footer">
-      <p class="copyright">&copy;HaiPingCao 2025</p>
-    </footer>
+    <main></main>
   </body>
 </html>
