--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--HEADER-->
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <link rel="stylesheet" href="/assets/css/style.css" />
     <script src="/assets/js/theme-toggle.js"></script>
-    <title>Index</title>
+    <!-- <title>Index</title> -->
   </head>
 
   <body>
-    <!--BODY-->
-    <nav class="header">
-      <div class="logo">LOGO Here</div>
-      <ul class="menu">
-        <li><button class="toggle-theme-btn">🌙</button></li>
-        <li><a href="/index.html" title="Home"> <span>Home</span></a></li>
-        <!-- <li><a href="/layout/about.html" title="About"> <span>About</span></a></li> -->
-        <li><a href="https://github.com/HaiPingCao" title="Projects"><span>Github</span></a></li>
-      </ul>
+    <!-- HEADER -->
+    <nav class="navbar">
+      <div class="navbar_container">
+        <a class="navbar_logo" href="/">HAII26</a>
+        <ul class="navbar_menu">
+          <li>
+            <a href="/index.html"> <span>Home</span></a>
+          </li>
+          <li>
+            <a href="https://github.com/HaiPingCao"> <span>Github</span></a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     <main></main>
   </body>
 </html>
