--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <a href="/index.html"> <span>Home</span></a>
           </li>
           <li>
+            <a href="/about.html"> <span>About Me</span></a>
+          </li>
+          <li>
             <a href="https://github.com/HaiPingCao"> <span>Github</span></a>
           </li>
           <li>
