--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <!-- DEPENDENCY -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap" rel="stylesheet">
     <!-- LOCAL SCRIPT -->
     <script src="/assets/js/theme-toggle.js"></script>
-    <script src="/assets/js/tags.js"></script>
+    <!-- <script src="/assets/js/tags.js"></script> -->
     <script src="/assets/js/markdown-renderer.js"></script>
 
     <title>HAII26</title>
